// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMarkers candle with volume events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "rgba(115, 191, 105, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 298,
            "width": 41,
            "x": 80,
            "y": 52,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 72,
            "width": 41,
            "x": 283,
            "y": 278,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 103,
            "width": 41,
            "x": 350,
            "y": 247,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(242, 73, 92, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 166,
            "width": 41,
            "x": 148,
            "y": 184,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 287,
            "width": 41,
            "x": 215,
            "y": 63,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 41,
            "x": 418,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 180,
            "width": 41,
            "x": 485,
            "y": 170,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 291,
            "width": 41,
            "x": 553,
            "y": 59,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 27,
            "width": 41,
            "x": 620,
            "y": 323,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 131,
            "width": 41,
            "x": 755,
            "y": 219,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(136, 136, 136, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 99,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 80,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 302,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 283,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 1,
            "y": 2,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 350,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 167,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 148,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 234,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 215,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 437,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 418,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 504,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 485,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 572,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 553,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 639,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 620,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 774,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 41,
            "x": 755,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 99,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 80,
            "y": 157,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 100,
            "y": 70,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 302,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 283,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 303,
            "y": 142,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 369,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 350,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 370,
            "y": 171,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 167,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 148,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 168,
            "y": 152,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 234,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 215,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 235,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 437,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 418,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 438,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 504,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 485,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 505,
            "y": 215,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 572,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 553,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 573,
            "y": 229,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 639,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 620,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 640,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 755,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 20,
            "x": 775,
            "y": 287,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 302,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 34,
            "width": 41,
            "x": 283,
            "y": 142,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 167,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 41,
            "x": 148,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 234,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 120,
            "width": 41,
            "x": 215,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 369,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 5,
            "width": 41,
            "x": 350,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 437,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 20,
            "width": 41,
            "x": 418,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 504,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 44,
            "width": 41,
            "x": 485,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 572,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 24,
            "width": 41,
            "x": 553,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 639,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 39,
            "width": 41,
            "x": 620,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 43,
            "width": 41,
            "x": 755,
            "y": 244,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 99,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 87,
            "width": 41,
            "x": 80,
            "y": 70,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 83,
            "width": 37,
            "x": 82,
            "y": 72,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 30,
            "width": 37,
            "x": 285,
            "y": 144,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 37,
            "x": 352,
            "y": 173,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 675,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 675,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 99,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 87,
            "width": 41,
            "x": 80,
            "y": 70,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 302,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 34,
            "width": 41,
            "x": 283,
            "y": 142,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 369,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 5,
            "width": 41,
            "x": 350,
            "y": 171,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 167,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 41,
            "x": 148,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 234,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 120,
            "width": 41,
            "x": 215,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 437,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 20,
            "width": 41,
            "x": 418,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 504,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 44,
            "width": 41,
            "x": 485,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 572,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 24,
            "width": 41,
            "x": 553,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 639,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 39,
            "width": 41,
            "x": 620,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 43,
            "width": 41,
            "x": 755,
            "y": 244,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;
